--- a/.env.development
+++ b/.env.development
@@ -1,6 +1,6 @@
 GENERATE_SOURCEMAP=false
 # REACT_APP_API_BASE_URL=https://qevla-microservices.herokuapp.com
-REACT_APP_API_BASE_URL=https://api.qevla.com
+REACT_APP_API_BASE_URL=http://54.210.50.74:3001
 # REACT_APP_API_BASE_URL=http://localhost:3001
 REACT_APP_MINIMUM_PASSWORD_STRENGTH=2
 REACT_APP_PASSWORD_PATTERN="^(?!.*\s)(?=.*[A-Z])(?=.*[a-z])(?=.*[0-9])(?=.*[~`!@#$%^&*()--+={}\[\]|\\:;"'<>,.?/_₹]).{10,}$"
