--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "bugs": {},
   "scripts": {
     "start": "react-scripts --openssl-legacy-provider start",
-    "build": "react-scripts build",
+    "build": "react-scripts --openssl-legacy-provider build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "install:clean": "rm -rf node_modules/ && rm -rf package-lock.json && npm install && npm start",
@@ -46,7 +46,7 @@
     "classnames": "2.3.1",
     "date-fns": "^2.29.1",
     "moment": "2.29.1",
-    "node-sass": "6.0.1",
+    "node-sass": "^8.0.0",
     "node-sass-package-importer": "5.3.2",
     "nouislider": "15.2.0",
     "react": "17.0.2",
