Changed base URL

--- a/.env.development
+++ b/.env.development
@@ -1,7 +1,7 @@
 GENERATE_SOURCEMAP=false
 # REACT_APP_API_BASE_URL=https://qevla-microservices.herokuapp.com
-REACT_APP_API_BASE_URL=http://54.226.34.22:3001
-# REACT_APP_API_BASE_URL=http://localhost:3001
+REACT_APP_API_BASE_URL=http://qevla.com:3001
+# REACT_APP_API_BASE_URL=http://qevla.com:3001
 REACT_APP_MINIMUM_PASSWORD_STRENGTH=2
 REACT_APP_PASSWORD_PATTERN="^(?!.*\s)(?=.*[A-Z])(?=.*[a-z])(?=.*[0-9])(?=.*[~`!@#$%^&*()--+={}\[\]|\\:;"'<>,.?/_₹]).{10,}$"
 REACT_APP_MAXIMUM_BENEFICIARY_COUNT=10
