--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 # REACT_APP_API_BASE_URL=https://qevla-microservices.herokuapp.com
-# REACT_APP_API_BASE_URL=http://localhost:3001
-REACT_APP_API_BASE_URL=http://54.226.34.22:3001/
+# REACT_APP_API_BASE_URL=http://qevla.com:3001
+REACT_APP_API_BASE_URL=http://qevla.com:3001/
